--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,14 @@
   <body>
     <%= render 'shared/navbar' %>
     <div class="container">
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+      <!-- <p class="notice"><%= notice %></p> -->
+      <%= render 'shared/devise_flash_override' %>
+      <% flash.each do |key, value| %>
+        <% unless key == "notice" || key == "alert" %>
+          <div class="alert alert-<%= key %>"><%= value %></div>
+        <% end %>
+      <% end %>
+
       <%= yield %>
     </div>
   </body>
