--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,6 +3,12 @@
     <ul class="nav navbar-nav navbar-left">
       <li class="nav-item"><%= link_to "Home", root_url, class: "nav-link waves-effect" %></li>
     </ul>
+    <% if user_signed_in? && current_user.owner? %>
+      <ul class="nav navbar-nav navbar-left">
+        <li class="nav-item"><%= link_to "New Event", new_event_path, class: "nav-link waves-effect" %></li>
+      </ul>
+    <% end %>
+
     <ul class="nav navbar-nav navbar-right">
       <% if user_signed_in? %>
         <li ="nav-item"><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></li>
