--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -9,3 +9,5 @@
 <h5>
 <%= "From " + @event.start_time.to_s(:time) + " To " + @event.end_time.to_s(:time) %>
 </h5>
+
+<%= button_to "delete", @event, :method => :delete %>
