--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,1 +1,7 @@
 <center><h1>Events</h1></center>
+
+<div class="card">
+        <h4 style="float: left">2 for 1 Drinks at Sandbar</h4>
+        <h4 style="float: right"> 8:00pm - 2:00am </h4>
+
+</div>
