--- a/app/views/events/owner_list.html.erb
+++ b/app/views/events/owner_list.html.erb
@@ -1,4 +1,4 @@
-<center><h1>All Events</h1></center>
+<center><h1>My Events</h1></center>
 
 <% @events.each do |e| %>
   <%= render 'shared/event_card', event: e %>
