--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,11 +1,21 @@
 .card {
   padding: 15px;
+  margin-bottom: 10px;
 }
 
 h4 {
-  display: inline;
+  display: inline-block;;
+}
+
+h5 {
+  display: inline-block;
 }
 
 .card-text {
   color: #37474F;
+}
+
+p {
+  padding-top: 8px;
+  padding-left: 15px;
 }
