--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -10,4 +10,4 @@
 <%= "From " + @event.start_time.to_s(:time) + " To " + @event.end_time.to_s(:time) %>
 </h5>
 
-<%= button_to "delete", @event, :method => :delete %>
+<%= button_to "delete", @event, :method => :delete" %>
