--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-dark default-color z-depth-1">
+<nav class="navbar navbar-fixed-top scrolling-navbar double-nav top-nav-collapse navbar-dark default-color z-depth-1">
   <div class="container-fluid">
     <ul class="nav navbar-nav navbar-left">
       <li class="nav-item"><%= link_to "Home", root_url, class: "nav-link waves-effect" %></li>
