--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
 
   <body>
     <%= render 'shared/navbar' %>
+  
+
     <div class="container">
       <!-- <p class="notice"><%= notice %></p> -->
       <%= render 'shared/devise_flash_override' %>
@@ -21,5 +23,9 @@
 
       <%= yield %>
     </div>
+
+  <!--/Intro content-->
+</div>
+<!--/.Mask-->
   </body>
 </html>
