--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,12 +1,15 @@
-<h4>
-  <%= @event.name %>
-</h4>
+<div class="card">
+  <h4>
+    <%= @event.name %>
+  </h4>
 
-<h4>
-  <%= @event.description %>
-</h4>
+  <h4 style="float: right">
+    <%= "From " + @event.start_time.to_s(:time) + " to " + @event.end_time.to_s(:time) %>
+  </h4>
 
-<h5>
-<%= "From " + @event.start_time.to_s(:time) + " To " + @event.end_time.to_s(:time) %>
-</h5>
-<%= button_to "delete", @event, :method => :delete %>
+  <p>
+    <%= @event.description %>
+  </p>
+
+  <%= button_to "delete", @event, :method => :delete %>
+</div>
