--- a/app/views/events/_fields.html.erb
+++ b/app/views/events/_fields.html.erb
@@ -3,13 +3,8 @@
   <%= f.text_field :name %><br />
 
   <%= f.label :description %>
-  <%= f.text_field :description %><br />
-
-<!--
-  <%= f.label :location %>
-  <%= f.text_field :description %><br />
--->
-
+  <%= f.text_area :description %><br />
+  
   <%= f.label :start_time %>
   <%= f.time_select :start_time %><br />
 
