--- a/app/views/shared/_event_card.html.erb
+++ b/app/views/shared/_event_card.html.erb
@@ -4,7 +4,7 @@
   </h4>
 
   <h4 style="float: right">
-    <%= "From " + event.start_time.strftime("%I:%M%p") + " to " + event.end_time.strftime("%I:%M%p") %>
+    <small><%= event.start_time.strftime("%I:%M%p") + " to " + event.end_time.strftime("%I:%M%p") %></small>
   </h4>
 
   <p>
