Add auth to controller

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -11,5 +11,5 @@
     <%= @event.description %>
   </p>
 
-  <%= button_to "delete", @event, :method => :delete %>
+  <%= button_to "delete", @event, :method => :delete if @edit_mode %>
 </div>
