--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 
-  <div class="card">
-    <p><%= @owner.name %></p>
+  <div>
+    <h1><%= @owner.name %></h1>
     <p><%= @owner.email %></p>
 
     <%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-default" if @edit_mode %>
