--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,15 +1,9 @@
 <div class="card">
-  <h4>
-    <%= @event.name %>
-  </h4>
+  <h4><%= @event.name %><small> at <%= link_to @owner.name, user_show_path(@owner) %></small></h4>
 
-  <h4 style="float: right">
-    <%= "From " + @event.start_time.to_s(:time) + " to " + @event.end_time.to_s(:time) %>
-  </h4>
+  <h4 style="float: right"><small><%= @event.start_time.to_s(:time) + " to " + @event.end_time.to_s(:time) %></small></h4>
 
-  <p>
-    <%= @event.description %>
-  </p>
+  <p><%= @event.description %></p>
 
   <%= button_to "delete", @event, :method => :delete if @edit_mode %>
 </div>
