--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,8 @@
-
-  <nav class="navbar navbar-fixed-top scrolling-navbar double-nav top-nav-collapse navbar-light purple z-depth-1">
+<nav class="navbar navbar-fixed-top scrolling-navbar double-nav top-nav-collapse navbar-light purple lighten-3 z-depth-1">
   <div class="container-fluid">
+    <a class="navbar-brand" href="app/assets/images/BivLogo.png">
+      <%= image_tag "BivLogo.png" %>
+    </a>
     <ul class="nav navbar-nav navbar-left">
       <li class="nav-item"><%= link_to "Home", root_url, class: "nav-link waves-effect" %></li>
     </ul>
