Responsive navbar-hamburger menu

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -24,3 +24,7 @@ body {
   padding-top: 70px;
   background-color: #F1F1F1;
 }
+
+.navbar-default navbar-fixed-top {
+    background-color: #CDB5CD;
+  }
