--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -32,7 +32,7 @@
 -->
 
 
-<nav class="navbar navbar-default navbar-fixed-top navbar-light purple lighten-3">
+<nav class="navbar navbar-default navbar-fixed-top navbar-light purple lighten-3 z-depth-1">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
