--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,11 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body>
     <%= render 'shared/navbar' %>
-  
 
     <div class="container">
       <!-- <p class="notice"><%= notice %></p> -->
@@ -23,9 +23,5 @@
 
       <%= yield %>
     </div>
-
-  <!--/Intro content-->
-</div>
-<!--/.Mask-->
   </body>
 </html>
