--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,9 +8,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="app/assets/images/BivLogo.png">
+       <%= link_to root_url, class: "nav-link waves-effect navbar-brand" do %>
         <%= image_tag "BivLogo.png" %>
-      </a>
+      <% end %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
