--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card card-custom">
   <h4><%= @event.name %><small> at <%= link_to @owner.name, user_show_path(@owner) %></small></h4>
 
   <h4 style="float: right"><small><%= @event.start_time.to_s(:time) + " to " + @event.end_time.to_s(:time) %></small></h4>
