--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,9 +23,6 @@
           <li class="nav-item"><%= link_to "New Event", new_event_path, class: "nav-link waves-effect" %></li>
         </ul>
         <ul class="nav navbar-nav navbar-left">
-          <li class="nav-item"><%= link_to "My Events", owner_list_path(current_user.id), class: "nav-link waves-effect" %></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-left">
           <li class="nav-item"><%= link_to "My Profile: "+current_user.name, user_show_path(current_user.id), class: "nav-link waves-effect" %></li>
         </ul>
       <% end %>
@@ -37,6 +34,6 @@
           <li class="nav-link"><%= link_to "Signup", new_user_registration_path, class: "nav-link waves-effect" %></li>
         <% end %>
       </ul>
-    </div><!-- /.navbar-collapse -->
+    </div>
 
 </nav>
