--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,10 @@
 
   <div>
-    <h1><%= @owner.name %></h1>
+    <div class="row">
+      <h1 class="pull-left"><%= @owner.name %></h1>
+      <%= link_to "Edit Profile", edit_user_registration_path, class: "btn pull-right" %>
+    </div>
+
     <p><%= @owner.email %></p>
     <p><%= @owner.description %></p>
 
