--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,16 +8,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-       <%= link_to root_url, class: "nav-link waves-effect navbar-brand" do %>
-        <%= image_tag "BivLogo.png" %>
-      <% end %>
+     <%= link_to root_url, class: "nav-link waves-effect navbar-brand" do %>
+        <%= image_tag "BivLogoForWeb.png" %>
+     <% end %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="nav-item"><%= link_to "Home", root_url, class: "nav-link waves-effect" %></li>
-      </ul>
       <% if user_signed_in? && current_user.owner? %>
         <ul class="nav navbar-nav navbar-left">
           <li class="nav-item"><%= link_to "New Event", new_event_path, class: "nav-link waves-effect" %></li>
@@ -38,5 +35,4 @@
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
-
 </nav>
