--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -26,9 +26,9 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
-  <%= f.submit "Sign up", class: "btn btn-default pull-left"%>
+  <%= f.submit "Sign up", class: "btn btn-default"%>
 
- <div class="row actions">
+ <div>
     <%= render "devise/shared/links" %>
   </div>
 <% end %>
