--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,5 +23,32 @@
 
       <%= yield %>
     </div>
+
+<!--  -->
+    <footer class="page-footer navbar-fixed-bottom purple lighten-3 center-on-small-only">
+      <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-8">
+                    <h5 class="title">Deal Finder</h5>
+                    <p>vaporware tousled small batch offal aesthetic single-origin coffee pickled viral venmo shoreditch cardigan.</p>
+                </div>
+
+                <div class="col-md-4">
+                    <h5 class="title"></h5>
+                    <ul>
+                        <li class="nav-link"><%= link_to "About" %>
+                        <li class="nav-link"><%= link_to "Contact" %>
+                        <li class="nav-link"><%= link_to "Advertise" %>
+                        <li class="nav-link"><%= link_to "Terms" %>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+    </footer>
+
+    <!-- -->
+
   </body>
+
 </html>
