--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
@@ -28,23 +29,30 @@
     <footer class="page-footer navbar-fixed-bottom purple lighten-3 center-on-small-only">
       <div class="container-fluid">
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-4 col-md-offset-3">
                     <h5 class="title">Deal Finder</h5>
                     <p>vaporware tousled small batch offal aesthetic single-origin coffee pickled viral venmo shoreditch cardigan.</p>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-md-2">
                     <h5 class="title"></h5>
                     <ul>
                         <li class="nav-link"><%= link_to "About" %>
                         <li class="nav-link"><%= link_to "Contact" %>
                         <li class="nav-link"><%= link_to "Advertise" %>
                         <li class="nav-link"><%= link_to "Terms" %>
+
                     </ul>
                 </div>
 
             </div>
         </div>
+        <div class="footer-copyright">
+        <div class="container-fluid">
+            © 2016 Copyright: <a href="#"> DankTreezzz.com </a>
+
+        </div>
+    </div>
     </footer>
 
     <!-- -->
