Added mail_to to user profile card, fixed profile and event show card padding. Also fixed links on edit profile page.

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -3,6 +3,10 @@
   margin-bottom: 10px;
 }
 
+.card-custom{
+  margin-top: 50px;
+}
+
 h4 {
   display: inline-block;;
 }
@@ -40,6 +44,7 @@ html {
 
 .navbar-fixed-bottom {
   position: absolute;
+  padding-bottom: 50px;
 }
 
 .btn-primary {
@@ -65,4 +70,14 @@ html {
   font-family: 'Lobster', cursive;
 }
 
-textarea { resize: none; }
+textarea {
+  resize: none;
+ }
+
+ .breadcrumb {
+   background-color: #F1F1F1;
+ }
+
+  .pull-left {
+   padding-left: 20px;
+ }
