--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,25 +1,28 @@
-<footer class="page-footer purple lighten-3 center-on-small-only">
+<footer class="page-footer navbar-fixed-bottom purple lighten-3 center-on-small-only">
   <div class="container-fluid">
         <div class="row">
-
-            <!--First column-->
-            <div class="col-md-6">
-                <h5 class="title">Footer Content</h5>
-                <p>Here you can use rows and columns here to organize your footer content.</p>
+            <div class="col-md-4 col-md-offset-3">
+                <h5 class="title">Deal Finder</h5>
+                <p>vaporware tousled small batch offal aesthetic single-origin coffee pickled viral venmo shoreditch cardigan.</p>
             </div>
-            <!--/.First column-->
 
-            <!--Second column-->
-            <div class="col-md-6">
-                <h5 class="title">Links</h5>
+            <div class="col-md-2">
+                <h5 class="title"></h5>
                 <ul>
-                    <li><a href="#!">Link 1</a></li>
-                    <li><a href="#!">Link 2</a></li>
-                    <li><a href="#!">Link 3</a></li>
-                    <li><a href="#!">Link 4</a></li>
+                    <li class="nav-link"><%= link_to "About" %>
+                    <li class="nav-link"><%= link_to "Contact" %>
+                    <li class="nav-link"><%= link_to "Advertise" %>
+                    <li class="nav-link"><%= link_to "Terms" %>
+
                 </ul>
             </div>
-            <!--/.Second column-->
+
         </div>
     </div>
+    <div class="footer-copyright">
+    <div class="container-fluid">
+        © 2016 Copyright: <a href="#"> DankTreezzz.com </a>
+
+    </div>
+</div>
 </footer>
