--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -42,10 +42,12 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Update", class: "btn btn-default" %>
+    <%= f.submit "Update", class: "btn btn-primary" %>
   </div>
 <% end %>
 
-<%= link_to "Back to Profile", :back, class: "btn" %>
+<ul>
+  <li><%= link_to "Back to my profile", :back %></li>
 
-<%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger" %>
+  <li><%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></li>
+</ul>
