--- a/app/views/events/_fields.html.erb
+++ b/app/views/events/_fields.html.erb
@@ -1,15 +1,25 @@
-<%= form_for @event do |f| %>
+
   <%= f.label :name %>
   <%= f.text_field :name %><br />
 
   <%= f.label :description %>
   <%= f.text_area :description %><br />
 
+  <% index = 1 %>
+  <% Event::WEEK_DAYS.each_with_index do |day| %>
+      <% checked_value = (day.second & index) != 0 %>
+    <%= label_tag(:weekday, class: "checkbox-inline") do %>
+      <%= check_box("weekday#{day.second}", "select", { checked: (@event.days_of_the_week & index) != 0 }, day.second.to_s) %>
+      <%= day.first %>
+      <% index *= 2 %>
+    <% end %>
+  <% end %>
+
+  <br>
+  <br>
+
   <%= f.label :start_time %>
   <%= f.time_select :start_time %><br />
 
   <%= f.label :end_time %>
   <%= f.time_select :end_time %><br />
-
-  <%= f.submit 'Create New Event', :class => 'btn btn-primary' %>
-<% end %>
