--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,3 +1,8 @@
 <h2>Create New Event</h2>
 
-<%= render 'fields' %>
+<%= form_for @event do |f| %>
+
+  <%= render 'fields', f: f %>
+
+  <%= f.submit 'Create Event', :class => 'btn btn-primary' %>
+<% end %>
