--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,11 @@
   <div class="card card-custom">
     <div class="row">
       <h1 class="pull-left"><%= @owner.name %></h1>
-      <%= link_to "Edit Profile", edit_user_registration_path, class: "btn pull-right" %>
+      <%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-default pull-right" if @edit_mode %>
     </div>
 
     <p><%= mail_to @owner.email %></p>
     <p><%= @owner.description %></p>
-
-    <%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-default" if @edit_mode %>
 
     <center><h4>Events</h4></center>
 
