--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,7 +26,7 @@
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
           <li ="nav-item"><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></li>
-        <% else user_signed_in? %>
+        <% else %>
           <li class="nav-item"><%= link_to "Login", new_user_session_path, class: "nav-link waves-effect" %></li>
           <li class="nav-link"><%= link_to "Signup", new_user_registration_path, class: "nav-link waves-effect" %></li>
         <% end %>
