--- a/app/views/events/_fields.html.erb
+++ b/app/views/events/_fields.html.erb
@@ -6,7 +6,7 @@
   <%= f.text_area :description %><br />
 
   <% index = 1 %>
-  <% Event::WEEK_DAYS.each_with_index do |day| %>
+  <% Event::WEEK_DAYS.each do |day| %>
       <% checked_value = (day.second & index) != 0 %>
     <%= label_tag(:weekday, class: "checkbox-inline") do %>
       <%= check_box("weekday#{day.second}", "select", { checked: (@event.days_of_the_week & index) != 0 }, day.second.to_s) %>
