Display only todays events on home page and order all events by start time

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,5 @@
 <center><h1>Events Today</h1></center>
 
-<% @events.each do |e| %>
+<% @events_today.each do |e| %>
   <%= render 'shared/event_card', event: e %>
 <% end %>
