--- a/app/views/events/_fields.html.erb
+++ b/app/views/events/_fields.html.erb
@@ -1,25 +1,25 @@
+<%= f.label :name %>
+<%= f.text_field :name %><br />
 
-  <%= f.label :name %>
-  <%= f.text_field :name %><br />
+<%= f.label :description %>
+<%= f.text_area :description %><br />
 
-  <%= f.label :description %>
-  <%= f.text_area :description %><br />
-
-  <% index = 1 %>
-  <% Event::WEEK_DAYS.each do |day| %>
-      <% checked_value = (day.last & index) != 0 %>
-    <%= label_tag(:weekday, class: "checkbox-inline") do %>
-      <%= check_box("weekday#{day.last}", "select", { checked: (@event.days_of_the_week & index) != 0 }, day.last.to_s) %>
-      <%= day.first %>
-      <% index *= 2 %>
-    <% end %>
+<% index = 1 %>
+<% Event::WEEK_DAYS.each do |day| %>
+    <% checked_value = (day.last & index) != 0 %>
+  <%= label_tag(:weekday, class: "checkbox-inline") do %>
+    <%= check_box("weekday#{day.last}", "select",
+      { checked: (@event.days_of_the_week & index) != 0 }, day.last.to_s) %>
+    <%= day.first %>
+    <% index *= 2 %>
   <% end %>
+<% end %>
 
-  <br>
-  <br>
+<br>
+<br>
 
-  <%= f.label :start_time %>
-  <%= f.time_select :start_time %><br />
+<%= f.label :start_time %>
+<%= f.time_select :start_time %><br />
 
-  <%= f.label :end_time %>
-  <%= f.time_select :end_time %><br />
+<%= f.label :end_time %>
+<%= f.time_select :end_time %><br />
