Day of the week chips for event_card view

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -81,3 +81,11 @@ textarea {
   .pull-left {
    padding-left: 20px;
  }
+
+.event-days {
+  border-radius: 20px;
+  background-color: lightgray;
+  color: white;
+  text-align: center;
+  font-size: 23px;
+}
