--- a/app/views/shared/_event_card.html.erb
+++ b/app/views/shared/_event_card.html.erb
@@ -11,9 +11,10 @@
   <h4 style="float: right">
     <small>
       <%= event.start_time.strftime("%I:%M%p").sub(/^[0:]*/,"") + " to " + event.end_time.strftime("%I:%M%p").sub(/^[0:]*/,"") %>
-      <br>
-      <%= event.days_as_string + " " %>
     </small>
+    <div class="event-days">
+      <%= event.days_as_string + "  " %>
+    </div>
   </h4>
 
   <p>
