--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,13 +1,14 @@
 <center><h1>Events <div class="btn-group">
-<button class="dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Today <i class="fa fa-chevron-down" aria-hidden="true"></i></button>
-  <!--  <div class="dropdown-menu">
-       <a class="dropdown-item"></a><br>
-       <a class="dropdown-item" href="#">Thursday</a><br>
-       <a class="dropdown-item" href="#">Friday</a><br>
-       <a class="dropdown-item" href="#">Saturday</a><br>
-       <a class="dropdown-item" href="#">Sunday</a><br>
-       <a class="dropdown-item" href="#">Monday</a><br>
-   </div> -->
+<button class="dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><%= @day.to_s %><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
+    <div class="dropdown-menu">
+        <%= link_to 'Monday', events_path(day: 'monday'), {class: "dropdown-item"} %><br>
+        <%= link_to 'Tuesday', events_path(day: 'tuesday'), { class: "dropdown-item"} %><br>
+        <%= link_to 'Wednesday', events_path(day: 'wednesday'), { class: "dropdown-item"} %><br>
+        <%= link_to 'Thursday', events_path(day: 'thursday'), { class: "dropdown-item"} %><br>
+        <%= link_to 'Friday', events_path(day: 'friday'), { class: "dropdown-item"} %><br>
+        <%= link_to 'Saturday', events_path(day: 'saturday'), { class: "dropdown-item"} %><br>
+        <%= link_to 'Sunday', events_path(day: 'sunday'), { class: "dropdown-item"} %><br>
+   </div>
 </div>
   </h1></center>
 
