--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,5 @@
 <center><h1>Events <div class="btn-group">
-<button class="dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><%= @day.to_s %><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
+<button class="dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><%= @day.to_s %><i class="fa fa-chevron-down" aria-hidden="true"> </i></button>
     <div class="dropdown-menu">
         <%= link_to 'Monday', events_path(day: 'monday'), {class: "dropdown-item"} %><br>
         <%= link_to 'Tuesday', events_path(day: 'tuesday'), { class: "dropdown-item"} %><br>
@@ -12,6 +12,12 @@
 </div>
   </h1></center>
 
-<% @events_today.each do |e| %>
-  <%= render 'shared/event_card', event: e %>
-<% end %>
+<div class="col-md-3">
+    <%= render 'shared/ownerList' %>
+</div>
+
+<div class="col-md-9">
+  <% @events_today.each do |e| %>
+    <%= render 'shared/event_card', event: e %>
+  <% end %>
+</div>
