--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,6 @@
-<footer class="page-footer navbar-fixed-bottom purple lighten-3 center-on-small-only">
-  <div class="container-fluid">
+<!--
+<footer id="footer" class="page-footer navbar-fixed-bottom purple lighten-3 center-on-small-only">
+ <div class="container-fluid">
         <div class="row">
             <div class="col-md-4 col-md-offset-3">
                 <h5 class="title">Deal Finder</h5>
@@ -18,3 +19,4 @@
         </div>
     </div>
 </footer>
+-->
