--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -12,7 +12,7 @@
 </center>
 
 <div class="col-md-3">
-    <%= render 'shared/ownerList' %>
+    <%= render 'shared/owner_list' %>
 </div>
 
 <div class="col-md-9">
