Pretty font class to appease our despotic overlords

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,7 +1,7 @@
 <center>
   <h1>what's going on
     <div class="btn-group">
-      <button class="dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <button class="dropdown-toggle pretty-font" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <%= Event.today_or(@day.to_s) %>
         <i class="fa fa-chevron-down" aria-hidden="true"></i>
       </button>
