--- a/app/views/shared/_owner_list.html.erb
+++ b/app/views/shared/_owner_list.html.erb
@@ -1,6 +1,6 @@
 <div class="card card-durag">
   <div class="names">
-    <h3 style="font-family: 'Lobster', cursive;"> Owners </h3>
+    <h3 class="pretty-font"> Owners </h3>
   </div>
   <ul>
     <% owners.each do |user| %>
