--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -4,5 +4,5 @@
 
   <%= render 'fields', f: f %>
 
-  <%= f.submit 'Update Schedule', :class => 'btn btn-primary' %>
+  <%= f.submit 'Update', :class => 'btn btn-primary' %>
 <% end %>
