--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,10 +8,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-     <%= link_to root_url, class: "nav-link waves-effect navbar-brand" do %>
-        <%= image_tag "BivLogoForWeb.png" %>
-     <% end %>
     </div>
+
+   <%= link_to root_url, class: "navbar-brand" do %> <!-- took out waves effect for now -->
+      <%= image_tag "logoSample.png" %>
+   <% end %>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
