--- a/app/views/shared/_event_card.html.erb
+++ b/app/views/shared/_event_card.html.erb
@@ -8,14 +8,7 @@
     <small> at <%= link_to event.owner.name, user_show_path(event.owner) %></small>
   </h4>
 
-  <h4 style="float: right" class="short-hd">
-    <small>
-      <%= event.pretty_start_time + " to " + event.pretty_end_time %>
-    </small>
-    <div class="event-days">
-      <%= event.day_or_dates + "  " %>
-    </div>
-  </h4>
+  <%= render 'shared/date_block', event: event %>
 
   <p><%= event.description %></p>
 
