fixed the favicon for real

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
     <script src="https://use.fontawesome.com/4b5f793601.js"></script>
 
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+    <link href="<%= image_path("favicon.ico") %>" rel="shortcut icon" />
   </head>
 
   <body class="bod">
