Event model code cleanup

--- a/app/views/shared/_date_block.html.erb
+++ b/app/views/shared/_date_block.html.erb
@@ -3,6 +3,6 @@
     <%= event.pretty_time_range %>
   </small>
   <div class="event-days <%= today_or_tomorrow_class(event) %>">
-    <%= event.day_or_dates %>
+    <%= event.pretty_active_time %>
   </div>
 </h4>
