removed sql time comparisons, event index query to completely sql

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,12 +2,12 @@
   <h1>what's going on
     <div class="btn-group">
       <button class="dropdown-toggle pretty-font" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <%= Event.today_or(@day.to_s) %>
+        <%= Event.today_or(@selected_day.to_s) %>
         <i class="fa fa-chevron-down" aria-hidden="true"></i>
       </button>
       <div class="dropdown-menu"><%= day_link_list %></div>
     </div>
-    <%= link_to "reset", events_path, class: "btn btn-sm btn-secondary" unless Event.current_day == @day %>
+    <%= link_to "reset", events_path, class: "btn btn-sm btn-secondary" unless Event.current_day == @selected_day %>
   </h1>
 </center>
 
