--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,12 +7,15 @@
       </button>
       <div class="dropdown-menu"><%= day_link_list %></div>
     </div>
-    <%= link_to "reset", events_path, class: "btn btn-sm btn-secondary" unless Event.current_day == @selected_day %>
+    <%= link_to "reset", events_path, class: "btn btn-sm btn-secondary" unless @view_is_today %>
   </h1>
 </center>
 
 <div class="col-md-10 col-md-offset-1">
-  <% @events_today.each do |e| %>
+  <% @active_events.each do |e| %>
     <%= render 'shared/event_card', event: e, location: true %>
   <% end %>
+</div>
+
+  <%= past_events(@inactive_events, @view_is_today) %>
 </div>
