Added relative timing for events

--- a/app/views/shared/_past_event_card.html.erb
+++ b/app/views/shared/_past_event_card.html.erb
@@ -13,7 +13,7 @@
         (<%= link_to "edit", edit_event_path(event)  %> or
         <%= link_to "delete", event, :method => :delete, data: {confirm: "confirm delete: #{event.name}" } %>)
       <% end %>
-      - <%= event.time_since_end %>
+      <%= event.time_relative_to_now %>
     </small>
   </h4>
 
